2002-02-25 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* visit_aera:
	  - finished the systems (can be improved later)
	
2002-02-24 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* updated docu
	  - added TODO lines
	  - Terrain section
	  - Docking section
	* imported data/mission/devel/visit_from the aera
	  and data/visit_from_the_aera
	* patched src/in_sdl.cpp, for joy buttons to work with 
	  a second joystick
	  thanks to Martin Scherer <marsch84@web.de> for his patch

	
2002-02-23 Alexander Rawass <alexannika@users.sourceforge.net>

	* updated documentation/homepage
	* modified c_alike.lex to ignore \r (to work for win32)

2002-02-21 Alexander Rawass <alexannika@users.sourceforge.net>

	* updated documentation/homepage
	  - updated install page
	  - started to write a player tutorial
	* updated some of my missions (author/description tags)

	
2002-02-19 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* new callbacks:
	  - _std.getSystemName()
	  - _unit.getVelocity(),isPlanet(),isStarShip(),isJumppoint()
	* added scale and add to vec3.c
	* random_launch.c: launch in front of player
	* modified unit.h to have is... functions
	* started to write more AIs (not yet)

	
2002-02-18 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* little improvements to random_launch.c

	
2002-02-17 Alexander Rawass <alexannika@users.sourceforge.net>

	* added omap object type to scripting (sort of struct)
	  - added file script_call_omap.cpp, mod. Makefile.am
	* wrote explore_the_unviverse.c script and missions
	* wrote random_launch.c


2002-02-16 Alexander Rawass <alexannika@users.sourceforge.net>

	* modified main.cpp, so that the savegame is only loaded if
	  there's a savegame variable
	

2002-02-13 Daniel Horn <hellcatv@hotmail.com>
	* Made genearted light maps save in home directory
	* Made universes searched for in home directory
	* Wired in a star system generator that will generate systems that are not there