@@ -18,10 +18,10 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  */
+#include "vegastrike.h"
 #include "cmd/unit.h"
 #include "order.h"
 #include "cmd/collection.h"
-#include "vegastrike.h"
 //#define ORDERDEBUG
 void Order::Execute () {
 #ifdef AGRDEBUG
